<resources>
    <string name="app_name">NSS Treasure Hunt Admin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="send_otp">Send OTP</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account_to_continue">Create your account to continue</string>
    <string name="user_name">User Name</string>
    <string name="college">College</string>
    <string name="create">Create</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="start">Start</string>
    <string name="enter_the_word_here">enter the word here</string>
    <string name="submit">Submit</string>
    <string name="thank_you_for_you_r_participation">Thank you for you\'r participation</string>
    <string name="q_n_o">Q.N.O</string>
    <string name="email">Email</string>
    <string name="welcomeText">NSS Treasure Hunt</string>
    <string name="SplashBG">SplashScreen Background</string>
    <string name="textview">TextView</string>
    <string name="deekshalogo">Deeksha Logo</string>
    <string name="thunt">Tresure Hunt Logo</string>
    <string name="ok">OK</string>
    <string name="hint_publish">Hint Publish</string>
    <string name="rank">Rank</string>
    <string name="start_time">Start Time</string>
    <string name="admin_activities">Admin Activities</string>
    <string name="activities_for_admin_to_control_the_competition">Activities for admin to control the competition</string>
    <string name="questionNumber">Question Number</string>
    <string name="update">update</string>
    <string name="publish_or_unpublish_hints">Publish or Unpublish Hints</string>
</resources>