<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="30dp"
    android:gravity="center"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/text_view1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_activities"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activities_for_admin_to_control_the_competition"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/white"
        android:layout_marginVertical="10dp"
        android:layout_below="@+id/text_view2"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hint_publish"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_zoom_out_map_24"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/Divider" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rank"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="60dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/white"
        android:layout_below="@+id/hint"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rank"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_sports_kabaddi_24"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/Divider" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/white"
        android:layout_below="@+id/rank"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_timer_24"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <View style="@style/Divider" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>